fixed alignment of the "minor edit" checkbox label

--- a/askbot/media/style/style.less
+++ b/askbot/media/style/style.less
@@ -2553,7 +2553,9 @@ ul#related-tags li {
             width: auto;
         }
         label[for="suppress_email"] {
-            vertical-align: top;
+            display: inline-block;
+            margin-bottom: 0;
+            vertical-align: bottom;
         }
 
         button.submit {
